--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 @CHARSET "ISO-8859-1";
 
-input[type=number],input[type=color],input[type=date],input[type=email],input[type=number],input[type=password],input[type=range],input[type=time],input[type=time],input[type=url] {
+input[type=number],input[type=color],input[type=checkbox],input[type=date],input[type=email],input[type=number],input[type=password],input[type=range],input[type=time],input[type=time],input[type=url] {
   border: #ccc solid 1px;
   margin: 2px 5px 2px 0;
   padding: 2px;
@@ -12,7 +12,25 @@ input[type=number],input[type=color],input[type=date],input[type=email],input[ty
   -khtml-border-radius: 5px;
   border-radius: 5px;
 }
-input[type=number] {
+#xforms input[type=number] {
   text-align: center;
   vertical-align: middle;
+}
+
+#xforms-form-list {
+	/* element with the id=xforms-form-list
+	 * used in xforms_form.tpl to display form list
+	 */
+}
+
+form[name~=xforms_] {
+	/* all forms containing xforms_ */
+}
+
+h1.xforms,h2.xforms,h3.xforms,h4.xforms {
+    /* all headers in an xforms class
+}
+
+[name~=xolb_ele] {
+    /* all elements that contain xolb_ele in the name*/
 }
